--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ tagline:             'Tagline goes here'
 #description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 description:         ''
 url:                 https://martynjones87.github.io
-baseurl:             'https://martynjones87.github.io'
+baseurl:             ''
 paginate:            5
 permalink:           pretty
 
