Final theming changes

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
-title:               Martyn Jones Blog
-tagline:             'Tagline goes here'
+title:               Martyn Jones' Blog
+tagline:             'Writing about coding and solving problems'
 #description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 description:         ''
 url:                 https://martynjones87.github.io
